--- a/styles/g3architects.css
+++ b/styles/g3architects.css
@@ -134,7 +134,7 @@ main > section{
 
 }
 .feature-card{
-    padding: 30px;
+    padding: 27px;
     border-radius: 8px;
     box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
     margin-bottom: 20px;
@@ -146,6 +146,25 @@ main > section{
     margin-top: 0;
     margin-bottom: 0;
     
+    
+
+}
+#experience-badge{
+    padding: 37px 28px;
+    font-size: 1.5rem;
+    font-weight: 500;
+    margin-left: -70px;
+    margin-top: -120px;
+
+
+}
+#experience-year{
+    font-size: 5rem;
+    font-weight: 700;
+
+}
+.featured-architect img{
+    width: 100%;
 
 }
 /* some facts related styles */
@@ -197,7 +216,9 @@ fact-describtion{
 }
 /* responsive media query */
 @media screen and (max-width:576px){
-    .navbar, .nav-link, .teams{
+    .navbar, .nav-link,
+     .features,
+     .teams{
         flex-direction: column;
     }
     .team-img-container, 
@@ -214,6 +235,11 @@ fact-describtion{
     .our-features{
         width: 100%;
         margin-bottom: 20px;
+        
+    }
+    #experience-badge{
+        margin-top: 20px;
+        margin-left: 20px;
         
     }
 }
